# ensembl-compara

./: .codecov.yml  .gitignore  .project  .travis.yml  DEPRECATED.md  GlyphSet_inheritance.doc  LICENSE  MANIFEST.in  NOTICE  PULL_REQUEST_TEMPLATE.md  README.md  W  conftest.py  cpanfile  denormalise_feat.pl  mypy.ini  perlcriticrc  project.toml  pull_request_template.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  run_all_tests.sh  setup.py  yamllintrc
cbuild/: README.txt
conf/: .cvsignore  .project  00_README.ini-files  AutoIdentities.pm  ConfigDeferrer.pm  ConfigDeferrer.pm1  LoadPlugins.pm  Plugins.pm-dist  SiteDefs.pm  _httpd_2-2.conf  _httpd_2-2_EC2.conf  _perl_EC2.startup  build  dump-packed.pl  httpd.conf  images.yaml  includeSiteDefs.pl  jira_tickets_eg_migration.json  mime.types  perl.startup  preload_modules.txt  previous.pm  search-packed.pl
ctrl_scripts/: .project  book-of-ensembl.pl  build_api_c  build_inline_c  build_packed  compile-book.pl  compile-precache.pl  dump-book-of-ensembl.pl  dump_conf  dump_conf2  helper.pl  hup_server  include.pl  init  kick_server  memcached  move_server  precache-farm.pl  precache-local.pl  precache.pl  restart_server  start_mart  start_server  status  stop_mart  stop_server  taillog
docs/: .gitignore  API_workshop_README.txt  API_workshop_slides.gene_part.odp  API_workshop_slides.genomic_part.ppt  ComparaTutorial.doc  ComparaTutorial.rtf  ComparaTutorial.txt  ComparaTutorial_4web.html  README-ProteinTrees.txt  README-beekeeper  README-epo  README-low-coverage-genome-aligner  README-master_database  README-multiplealigner  README-pairaligner  README-stable_id_mapping  README.multi_align.dumps  README.protein_trees.dumps  README.xml_dumps  Release+coordination+documentation.doc  ReleaseCoordination.txt  ReleaseCoordinationDocumentation.doc  api.md  conf.py  contigview_help.html  create_mlss_table.conf  create_mlss_table.pl  familyview_help.html  geneview_help.html  genomic_schema.mwb  healthchecks.txt  index.rst  master_reg.conf  protein_schema.mwb  rtd_upgrade.sh  schema.rst  schema_doc.html  schema_intro.html  species_tree_img.txt  syntenyview_help.html
htdocs/: .project  analyses.txt  downloads.html  e_divisions.json  e_species_divisions.json  edoc.css  edoc.js  failed.html  forgotten.html  forgotten_no_user.html  index.html  login.html  motifWidget.htm  opensearchdescription.xml  pdoc.css  robots.txt  sitemap.html  sorry.html  t.htm  taxon_tree_data.js  test.html  tools.html  trackhub_error.html  updated_password.html  whatsnew.html
modules/: .project  ExaLead.pm  LICENSE  Makefile.PL  ParseMaster.pm  Preload.pm  runtests.pl
perl/: .project  TODO.txt  getfamily
pipelines/: lsf_params_nextflow.config  lsf_rc_nextflow.config  nextflow.config  orthofinder_modules.nf  slurm_rc_nextflow.config  utilities.nf
scripts/: README  import_synteny_hack.pl
sql/: UpdatePrefilledTable.pl  analysis_job.sql  anchors.sql  delete_epo_aligns.sql  drop-pipeline-tables.sql  ensembl_accounts.sql  ensembl_compara_27_1.patch.sql  genome_db.txt  genome_db_stats.sql  hive-tables.sql  hive.sql  homology-stats.sql  method_link.txt  ncbi_taxon.sql  patch_100_101_a.sql  patch_100_101_b.sql  patch_100_101_c.sql  patch_100_101_d.sql  patch_100_101_e.sql  patch_100_101_f.sql  patch_101_102_a.sql  patch_101_102_b.sql  patch_101_102_c.sql  patch_102_103_a.sql  patch_102_103_b.sql  patch_103_104_a.sql  patch_103_104_b.sql  patch_103_104_c.sql  patch_104_105_a.sql  patch_104_105_b.sql  patch_104_105_c.sql  patch_104_105_d.sql  patch_104_105_e.sql  patch_105_106_a.sql  patch_105_106_b.sql  patch_106_107_a.sql  patch_106_107_b.sql  patch_107_108_a.sql  patch_107_108_b.sql  patch_108_109_a.sql  (+176 more)
travisci/: MultiTestDB.conf.travisci  all-housekeeping_harness.sh  api_build_run_last_hour.py  compile.py  harness.sh  housekeeping_apache2.t  housekeeping_ascii.t  perl-external_unittest_harness.sh  perl-linter_harness.sh  perl-unittest_harness.sh  pylint_harness.sh  python-linter_harness.sh  python-unittest_harness.sh  sql-unittest_harness.sh  trigger-dependent-build.sh
utils/: Tool.pm  blast_cleaner.pl  blast_database.pl  check_analysis_description-dna_align.pl  check_analysis_description-pf.pl  check_dumps.pl  check_gene_trans_logic_names.pl  check_oldlinks.pl  checkchecksums.pl  clean_mart_sessions_table.pl  create_das_dsn_page.pl  create_das_sources_page.pl  css-js-cleaner.pl  db_sizes.pl  decrypt-session-cookie.pl  do_fasta_dump  do_fasta_dump_test  do_flatfile_dump  do_flatfile_dump_registry  do_mysql_dump  do_view_examples.pl  dump_contents_of_SpeciesDefs  dump_ensembl_lib_dirs.pl  dump_ensembl_valid_species.pl  dump_tombstones.pl  dump_tracks  ensembl2gtf_eg  ensembl2gtf_forweb  generate_ini_files.pl  (+31 more)
(+9168 files in other folders)
