[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# CITest project is on hold and it needs to be updated before resuming its unit tests
addopts = "-v --tb=native --server=mysql://ensadmin:$ENSADMIN_PSW@mysql-ens-compara-prod-1:4485/ --ignore=src/python/tests/test_citest.py --ignore=src/python/tests/helpers.py"
testpaths = ["src/python/tests"]

[tool.coverage.run]
source = ["src/python/lib"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pylint.messages_control]
max-line-length = 110
disable = [
    "invalid-name",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import"
]

[tool.pylint.typecheck]
signature-mutators = [
    "click.decorators.argument",
    "click.decorators.option",
]
