# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ensembl-compara"
description = "Ensembl Compara's Python library"
requires-python = ">= 3.10"
dynamic = [
    "readme",
    "version",
]
authors = [
    {name = "Ensembl Compara", email = "dev@ensembl.org"},
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ensembl-py@git+https://github.com/Ensembl/ensembl-py.git@1.2.3a1#egg=ensembl-py",
    "biopython>=1.76",
    "ete3>=3.1.1",
    "lxml>=4.9.2",
    "pandas>=0.24.2",
    "pybedtools>=0.8.2",
    "sqlalchemy>=1.4.0",
    "xmlschema>=2.5.1",
]

[project.optional-dependencies]
doc = [
    "mock",
    "Sphinx",
    "sphinx-rtd-theme",
]
test = [
    "black",
    "coverage[toml]",
    "mock",
    "mypy",
    "pylint",
    "pytest-cov",
    "types-PyYAML>=6.0.12.20240311",
    "yamllint",
]

[project.urls]
homepage = "https://www.ensembl.org"
repository = "https://github.com/Ensembl/ensembl-compara"

[tool.setuptools]
package-dir = {"" = "src/python/lib"}

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {file = ["PIP_VERSION"]}

[tool.pytest.ini_options]
# CITest project is on hold and it needs to be updated before resuming its unit tests
addopts = "-v --tb=native --server=mysql://ensadmin:$ENSADMIN_PSW@mysql-ens-compara-prod-1:4485/ --ignore=src/python/tests/test_citest.py"
testpaths = ["src/python/tests"]

[tool.coverage.run]
source = ["src/python/lib"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true

[tool.pylint.main]
max-line-length = 110
disable = [
    "invalid-name",
    "similarities",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-statements",
    "unspecified-encoding",
    "wildcard-import"
]